--- a/layout.css
+++ b/layout.css
@@ -23,6 +23,11 @@ top: 95%;
 
 }
 
+#playlists{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
 #artistinfo{
 background-color: cornflowerblue;
 height:5%;
