--- a/layout.css
+++ b/layout.css
@@ -25,8 +25,59 @@ top: 95%;
 
 #playlists{
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  place-items: center;
 }
+
+.playlist_card {
+  background: url(image_url) no-repeat center center;
+  background-size: cover; /* scale the background image to cover the entire element */
+  object-fit: fit;
+  width: 170px;
+  height: 200px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #181818;
+  margin: 10px 0;
+  white-space: nowrap;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+.playlist_card p {
+  width: 90%;
+  text-align: left;
+  color: white;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  align-self: flex-start;
+  font-weight: bold;
+}
+
+.playlist_card p1 {
+  align-self: flex-start;
+  color: #00d755;
+  align-self: flex-start;
+}
+
+
+.playlist_card:hover {
+  background-color: #282828;
+}
+
+.playlist_card:hover img {
+  opacity: 0.7; 
+}
+
+.playlist_card:hover p {
+  color:lightslategrey; 
+}
+
+.playlist_card:hover p1 {
+  opacity: 0.7; 
+}
+
+
 
 #artistinfo{
 background-color: cornflowerblue;
@@ -52,7 +103,7 @@ top: 95%;
 }  
 
 
-.LunqxlFIupJw_Dkx6mNx {
+.xyz {
     --card-container-border-radius: clamp(4px,(var(--column-width,0px) - 32px) * 0.025,8px);
     -webkit-box-flex: 1;
     background: #181818;
