--- a/layout.css
+++ b/layout.css
@@ -9,18 +9,24 @@
 
 #spotify{
   background-color: #272727;
-  overflow-y:auto;
+  width: 100%;
   height: 100%;
   position: absolute;
-  width: 100%;
+  /* scrollbar management */
+  overflow-y:scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;  /* IE and Edge */
+}
+
+.spotify::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Chrome, Safari and Opera */
 }
 
 #spotifyplayer{
-background-color:black;
-height: 20%;
-position: absolute;
-top: 95%;
-
+  background-color:black;
+  height: 20%;
+  position: absolute;
+  top: 95%;
 }
 
 #playlists{
@@ -31,8 +37,10 @@ top: 95%;
 
 .playlist_card {
   background: url(image_url) no-repeat center center;
-  background-size: cover; /* scale the background image to cover the entire element */
-  object-fit: fit;
+  background-size: cover;
+  object-fit: clip;
+  object-position: center;
+  image-rendering: crisp-edges;
   width: 170px;
   height: 200px;
   padding: 10px;
@@ -43,6 +51,11 @@ top: 95%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.playlist_card img {
+  width: 170px;
+  height: 170px;
+  object-fit: cover;
+}
 
 .playlist_card p {
   width: 90%;
