--- a/layout.css
+++ b/layout.css
@@ -78,7 +78,7 @@
   background-color: #090909;
 }
 
-.playlist_card:hover img {
+.playlist_card:hover img{
   opacity: 0.8; 
 }
 
@@ -87,7 +87,23 @@
 }
 
 .playlist_card:hover p1 {
-  opacity: 0.8; 
+  opacity: 0.5; 
+}
+
+
+.playlist_card:hover .playlist_description{
+  display:block;
+  background-color: #00d856;
+  color: black;
+  padding: 10px;
+  width: 170px;
+  position: absolute;
+  white-space: normal;
+  z-index: 1;
+  border-radius: 5px;
+}
+.playlist_description{
+  display:none;
 }
 
 
