--- a/layout.css
+++ b/layout.css
@@ -3,6 +3,12 @@
     left: 0px;
 }
 
+.logo{
+  z-index: 9;
+  max-width: 200px;
+  position: absolute;
+}
+
 #main-body{
     background-color: #272727;
 }
@@ -22,140 +28,17 @@
   display: none; /* Hide scrollbar for Chrome, Safari and Opera */
 }
 
-#spotifyplayer{
-  background-color:black;
-  height: 20%;
-  position: absolute;
-  top: 95%;
+.spotifyplayerbeta{
+  width: 10%;
 }
-
-#playlists{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  place-items: center;
-}
-
-.playlist_card {
-  background: url(image_url) no-repeat center center;
-  background-size: cover;
-  object-fit: clip;
-  object-position: center;
-  image-rendering: crisp-edges;
-  width: 170px;
-  height: 200px;
-  padding: 10px;
-  border-radius: 10px;
-  background-color: #181818;
-  margin: 10px 0;
-  white-space: nowrap;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.playlist_card img {
-  width: 170px;
-  height: 170px;
-  object-fit: cover;
-}
-
-.playlist_card p {
-  width: 90%;
-  text-align: left;
-  color: white;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  align-self: flex-start;
-  font-weight: bold;
-}
-
-.playlist_card p1 {
-  align-self: flex-start;
-  color: #00d755;
-  align-self: flex-start;
-}
-
-
-.playlist_card:hover{
-  background-color: #090909;
-}
-
-.playlist_card:hover img{
-  opacity: 0.8; 
-}
-
-.playlist_card:hover p {
-  color:lightslategrey; 
-}
-
-.playlist_card:hover p1 {
-  opacity: 0.5; 
-}
-
-
-.playlist_card:hover .playlist_description{
-  display:block;
-  background-color: #00d856;
-  color: black;
-  padding: 10px;
-  width: 170px;
-  position: absolute;
-  white-space: normal;
-  z-index: 1;
-  border-radius: 5px;
-}
-.playlist_description{
-  display:none;
-}
-
-
-
-#artistinfo{
-background-color: cornflowerblue;
-height:5%;
-top: 95%;
-}
-
-
-.logo{
-    z-index: 9;
-    max-width: 200px;
-    position: absolute;
-}
-
 
 /*FLEX Container */
 .flex-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 50%;
+    grid-template-rows: 1fr;
 }
 
 .flex-child {
     flex: 1;
-}  
-
-
-.xyz {
-    --card-container-border-radius: clamp(4px,(var(--column-width,0px) - 32px) * 0.025,8px);
-    -webkit-box-flex: 1;
-    background: #181818;
-    border-radius: calc(var(--card-container-border-radius) + 2px);
-    -ms-flex: 1;
-    flex: 1;
-    isolation: isolate;
-    padding: 16px;
-    position: relative;
-    -webkit-transition: background-color .3s ease;
-    transition: background-color .3s ease;
-    width: 100%;
-  }
-
-  .XiVwj5uoqqSFpS4cYOC6 {
-    height: 100%;
-  }
-
-  .xBV4XgMq0gC5lQICFWY_ {
-    margin-bottom: 16px;
-    position: relative;
-  }
-
-  element {
-    --card-color: #004020;
-  }
+} 
