--- a/layout.css
+++ b/layout.css
@@ -1,6 +1,8 @@
 #interactivemap{
     top: 0px;
     left: 0px;
+    width: 860px;
+    min-width: 860px;
 }
 
 .logo{
@@ -18,6 +20,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  
   /* scrollbar management */
   overflow-y:scroll;
   scrollbar-width: none;
