--- a/layout.css
+++ b/layout.css
@@ -35,7 +35,7 @@
 /*FLEX Container */
 .flex-container {
     display: grid;
-    grid-template-columns: 1fr 50%;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
 }
 
