--- a/layout.css
+++ b/layout.css
@@ -7,12 +7,13 @@
 
 .logo{
   z-index: 9;
-  max-width: 200px;
+  max-width: 700px;
   position: absolute;
 }
 
 #main-body{
     background-color: #272727;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #spotify{
@@ -42,3 +43,42 @@
 .flex-child {
     flex: 1;
 } 
+
+#seperator a {
+  text-decoration: none;
+  padding: 10px 10px;
+  border-radius: 10px;
+  background-color: #00d755;
+  color: #fff;
+  font-size: 20px;
+  transition: all 0.3s ease;
+  height: 30px;
+  display: flex; /* use flex layout */
+  align-items: center; /* center the button vertically */
+  justify-content: center; /* center the button horizontally */
+  width: 98vw;
+  position: absolute;
+}
+
+#seperator a:hover {
+  background: url('/ukraine_flag.png');
+  background-size: 100% 100%;
+  color: black;
+  cursor: pointer;
+}
+
+/*FAQ*/
+#FAQ{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: 20px;
+  color: #00d755;
+  text-align: center;
+  background-color: #00d755;
+}
+
+#FAQ_text{
+  color: white;
+}
