--- a/faq.css
+++ b/faq.css
@@ -2,7 +2,19 @@
     background-color: #272727;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden;
+    /* scrollbar management */
+    overflow-y: scroll;
+    scrollbar-width: none;
+    /* IE and Edge */
+    -ms-overflow-style: none;
 }
+
+/*scrollbar for chrome*/
+#sbody::-webkit-scrollbar{
+    width: 0.2em;
+    background-color: transparent;
+  }
 
 #body h1{
     color: white;
