--- a/faq.css
+++ b/faq.css
@@ -26,6 +26,11 @@
     color: #00d755;
 }
 
+#body h3{
+    border-left: 5px solid #00d755;
+    padding-left: 10px;
+}
+
 #body h3:hover{
     background-color: #00d755;
     color: #272727;
