--- a/layout.css
+++ b/layout.css
@@ -68,9 +68,9 @@
 }
 
 #seperator a:hover {
-  background: url('/ukraine_flag.png');
+  background: #ffd700 ;
   background-size: 100% 100%;
-  color: black;
+  color: #0057b7;
   cursor: pointer;
 }
 
