--- a/playlists.css
+++ b/playlists.css
@@ -1,4 +1,4 @@
-#playlists{
+#playlists>li{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     place-items: center;
