Search bar added
Can now search through playlists.
Working on login as well.

--- a/layout.css
+++ b/layout.css
@@ -90,6 +90,12 @@
   cursor: pointer;
 }
 
+#search{
+  background-color:#272727;
+  outline: #00d755;
+  color: white;
+}
+
 /*FAQ*/
 #FAQ{
   position: absolute;
