--- a/playlists.css
+++ b/playlists.css
@@ -2,7 +2,10 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     place-items: center;
+    justify-content: left;
   }
+
+
   
 .playlist_card {
   background-size: cover;
