--- a/layout.css
+++ b/layout.css
@@ -1,118 +1,7 @@
-#interactivemap{
-    top: 0px;
-    left: 0px;
-    width: 860px;
-    min-width: 860px;
-}
-
-.logo{
-  z-index: 9;
-  max-width: 700px;
-  position: absolute;
-}
-
+/*Main body and initial pop-up*/
 #main-body{
     background-color: #272727;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-#spotify{
-  background-color: #272727;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  
-  overflow: hidden;
-  /* scrollbar management */
-  overflow-y: scroll;
-  scrollbar-width: none;
-  /* IE and Edge */
-  -ms-overflow-style: none;
-}
-
-/*scrollbar for chrome*/
-#spotify::-webkit-scrollbar{
-  width: 0.2em;
-  background-color: transparent;
-}
-
-.spotify::-webkit-scrollbar {
-  display: none; /* Hide scrollbar for Chrome, Safari and Opera */
-}
-
-/*FLEX Container */
-.flex-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-}
-
-.flex-child {
-    flex: 1;
-} 
-
-#login{
-  z-index: 9;
-  background-color: #00d755;
-  border-color: transparent;
-  padding: 10px 10px;
-  border-radius: 10px;
-  position: absolute;
-  top: 500px;
-  margin-bottom: 10px;
-  align-items: center;
-  color: #272727;
-  font-size: 17px;
-}
-
-#login:hover{
-  opacity: 0.8;
-}
-
-#seperator a{
-  text-decoration: none;
-  padding: 10px 10px;
-  border-radius: 5px;
-  background-color: #00d755;
-  color: #272727;
-  font-size: 20px;
-  transition: all 0.3s ease;
-  height: 30px;
-  display: flex; /* use flex layout */
-  align-items: center; /* center the button vertically */
-  justify-content: center; /* center the button horizontally */
-  width: 97vw;
-  position: absolute;
-}
-
-#seperator a:hover {
-  background: #ffd700 ;
-  background-size: 100% 100%;
-  color: #0057b7;
-  cursor: pointer;
-}
-
-#search{
-  background-color:#272727;
-  color: white;
-  width: 97%;
-  border-color: #00d755;
-}
-
-/*FAQ*/
-#FAQ{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  height: 20px;
-  color: #00d755;
-  text-align: center;
-  background-color: #00d755;
-}
-
-#FAQ_text{
-  color: white;
 }
 
 .popup {
@@ -142,7 +31,7 @@
 
 .popup-content button {
   background-color: #ffd700;
-  border-radius: 5px;
+  border-radius: 20px;
   color: #0057b7;
   border-color: transparent;
   margin-top: 10px;
@@ -153,6 +42,117 @@
   color: #ffd700;
 }
 
+/*FLEX Container - layount of website */
+.flex-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+.flex-child {
+  flex: 1;
+} 
+
+/*Map part - see switch.css for switches css*/
+#interactivemap{
+  top: 0px;
+  left: 0px;
+  width: 860px;
+  min-width: 860px;
+}
+
+.logo{
+  z-index: 9;
+  max-width: 700px;
+  position: absolute;
+}
+
+#login{
+  z-index: 9;
+  background-color: #00d755;
+  border-color: transparent;
+  padding: 10px 10px;
+  border-radius: 20px;
+  position: absolute;
+  top: 500px;
+  margin-bottom: 10px;
+  align-items: center;
+  color: #272727;
+  font-size: 17px;
+}
+
+#login:hover{
+  opacity: 0.8;
+}
+
+/*Demo-agent section (playlist area)*/
+#search{
+  background-color:#272727;
+  color: white;
+  width: 97%;
+  border-color: #00d755;
+}
+
+#demo-agents-wrapper{
+  background-color: #272727;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  
+  overflow: hidden;
+  /* scrollbar management */
+  overflow-y: scroll;
+  scrollbar-width: none;
+  /* IE and Edge */
+  -ms-overflow-style: none;
+}
+
+#demo-agents-wrapper::-webkit-scrollbar{
+  width: 0.2em;
+  background-color: transparent;
+  display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+}
+
 #buffer_area{
   height: 200px;
+}
+
+/*Seperator (donation page)*/
+#seperator a{
+  text-decoration: none;
+  padding: 10px 10px;
+  border-radius: 20px;
+  background-color: #00d755;
+  color: #272727;
+  font-size: 20px;
+  transition: all 0.3s ease;
+  height: 30px;
+  display: flex; /* use flex layout */
+  align-items: center; /* center the button vertically */
+  justify-content: center; /* center the button horizontally */
+  width: 99vw;
+  position: absolute;
+}
+
+#seperator a:hover {
+  background: #ffd700 ;
+  background-size: 100% 100%;
+  color: #0057b7;
+  cursor: pointer;
+}
+
+/*FAQ*/
+#FAQ{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: 20px;
+  color: #00d755;
+  text-align: center;
+  background-color: #00d755;
+}
+
+#FAQ_text{
+  color: white;
 }
