--- a/layout.css
+++ b/layout.css
@@ -150,7 +150,7 @@
 #FAQ a, #FAQ p {
   border: 1px solid black;
   padding: 10px;
-  color: white;
+  color: #272727;
   border-radius: 20px;
   height: 10px;
   background-color: #00d755;
