--- a/layout.css
+++ b/layout.css
@@ -117,6 +117,33 @@
   height: 200px;
 }
 
+#loading-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1; /* put it on top of other elements */
+  animation: pulsate 1.2s ease-out 0s infinite alternate;
+  color: #00d755;
+  size: 120px;
+}
+
+@keyframes pulsate {
+  from {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+    transform: scale(1.1);
+  }
+}
+
+
+
 /*Seperator*/
 #seperator{
   top: 10px;
