--- a/layout.css
+++ b/layout.css
@@ -129,7 +129,7 @@
   z-index: 1; /* put it on top of other elements */
   animation: pulsate 1.2s ease-out 0s infinite alternate;
   color: #00d755;
-  size: 120px;
+  font-size: 40px;
 }
 
 @keyframes pulsate {
@@ -138,7 +138,6 @@
   }
   to {
     opacity: 1;
-    transform: scale(1.1);
   }
 }
 
