--- a/layout.css
+++ b/layout.css
@@ -192,3 +192,48 @@
   color: #0057b7;
   cursor: pointer;
 }
+
+
+@media (max-width: 1100px) {
+  .flex-child.right {
+    align-self: center; /* Align the right child to the bottom */
+    height: 860px;
+  }
+
+  .flex-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr ;
+  }
+
+  #main-body::-webkit-scrollbar{
+    width: 0.2em;
+    background-color: transparent;
+    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+  }
+
+  .popup-content {
+    width: 90%; 
+    padding: 15px; 
+    font-size: 2rem; 
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .popup-content button {
+    padding: 15px 25px; 
+    font-size: 18px; 
+  }
+
+  .popup-content p, .popup-content h1, .popup-content h2 {
+    line-height: 1.6; 
+  }
+
+  .popup-content button {
+    font-size: 2rem;
+  }
+}
